<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/purple_200">

    <ImageView
        android:layout_gravity="center"
        android:layout_marginTop="150dp"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/ic_securitybusiness"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="56dp"
        android:id="@+id/outlinedTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username_signin"
        app:boxCornerRadiusTopStart="30sp"
        app:boxCornerRadiusBottomStart="30dp"
        app:boxCornerRadiusBottomEnd="30dp"
        app:boxCornerRadiusTopEnd="30dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:textColorHint="@color/white"
        android:layout_marginHorizontal="20dp"
        app:boxStrokeColor="@color/mtrl_textinput_default_box_stroke_color">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_baseline_account_circle"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_marginHorizontal="20dp"
        app:boxCornerRadiusTopStart="30sp"
        app:boxCornerRadiusBottomStart="30dp"
        app:boxCornerRadiusBottomEnd="30dp"
        app:boxCornerRadiusTopEnd="30dp"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginTop="16dp"
        android:hint="@string/password_signin"

        android:textColorHint="@color/white"
        app:boxStrokeColor="@color/mtrl_textinput_default_box_stroke_color">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:drawableEnd="@drawable/ic_baseline_vpn_key"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:layout_width="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/remember_password"
        android:layout_marginLeft="32dp"
        android:buttonTint="@color/white"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp">

        <TableRow>
            <com.google.android.material.button.MaterialButton
                android:layout_weight="1"
                app:cornerRadius="20dp"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginRight="32dp"
                android:textAllCaps="false"
                android:text="@string/signin_button"
                android:backgroundTint="@color/orange1"

                />

            <Button
                android:id="@+id/textButton"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:textColor="@color/white"
                android:layout_weight="1"
                app:cornerRadius="20dp"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:textAllCaps="false"
                android:text="@string/forgetpassword"
                />
        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            >
            <TextView
                android:layout_marginRight="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="96dp"
                android:text="@string/dont_have_account"
                android:textColor="@color/white" />

            <TextView
                android:layout_marginRight="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:textSize="18sp"
                android:text="@string/signup_info"
                android:textColor="@color/white" />

        </LinearLayout>
        <com.google.android.material.button.MaterialButton
            android:layout_gravity="center"
            android:layout_marginRight="32dp"
            app:cornerRadius="20dp"
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:layout_marginTop="48dp"
            android:textAllCaps="false"
            app:strokeColor="@color/white"
            app:strokeWidth="0.7dp"
            android:drawableBottom="@drawable/ic_baseline_chevron_right"
            />

    </LinearLayout>

</LinearLayout>